trying to fix sidebar from stretching

--- a/client/src/CSS/App.css
+++ b/client/src/CSS/App.css
@@ -10,5 +10,6 @@
 .wrapper {
   display: flex;
   min-height: 100vh;
-  align-items: stretch;
+  width: 100%;
+
 }
